fix navbar form on collapse

--- a/less/components/navbar.less
+++ b/less/components/navbar.less
@@ -291,26 +291,31 @@
 // our navbars.
 
 .navbar-form {
-  margin-left: -@navbar-padding-horizontal;
-  margin-right: -@navbar-padding-horizontal;
-  padding: 10px @navbar-padding-horizontal;
-  border-top: 1px solid transparent;
-  border-bottom: 1px solid transparent;
-  @shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 0 rgba(255,255,255,.1);
-  .box-shadow(@shadow);
+    margin-left: -@navbar-padding-horizontal;
+    margin-right: -@navbar-padding-horizontal;
+    padding: 10px @navbar-padding-horizontal;
 
-  // Mixin behavior for optimum display
-  .form-inline();
+    // Mixin behavior for optimum display
+    .form-inline();
 
-  .form-group {
-    @media (max-width: @grid-float-breakpoint-max) {
-      margin-bottom: 5px;
+    .form-group {
+        @media (max-width: @grid-float-breakpoint-max) {
+            margin-bottom: 5px;
 
-      &:last-child {
-        margin-bottom: 0;
-      }
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
     }
-  }
+
+    @media @mobile-and-tablet{
+        width: auto;
+        margin-left: 0;
+        margin-right: 0;
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+}
 
   // Vertically center in expanded, horizontal navbar
   .navbar-vertical-align(@input-height-base);
@@ -687,7 +692,7 @@
 
 
 // dropdown menu
-@media (min-width: @grid-float-breakpoint) {
+@media @mobile-and-tablet {
   .navbar-right {
     .dropdown-menu,
     .dropdown-content {
